--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
  
     </head>
     <body>
+        <header>
+            Barbearia Alura
+        </header>
+        
         <img id="banner" src="banner.jpg">
         
         <div class="principal">
