--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="tituloprincipal"> Barbearia Alura </h1>
     </header>
 
-    <img id="banner" src="banner.jpg">
+    <img id="banner" src="imagens/banner.jpg">
 
     <div class="principal">
 
@@ -45,7 +45,7 @@
                 <li class="itens">Espaço diferenciado</li>
             </ul>
 
-            <img class="imagemb" src="beneficios.jpg">
+            <img class="imagemb" src="imagens/beneficios.jpg">
 
     </div>
 
