--- a/produtos.html
+++ b/produtos.html
@@ -14,7 +14,7 @@
     <header>
         <div class="caixa">
             <h1><img src="imagens/logo.png"></h1>
-            <nav>    
+            <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
@@ -23,6 +23,29 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <ul class="produtos">
+            <li>
+                <h2>Cabelo</h2>
+                <img src="imagens/cabelo.jpg">
+                <p class="descricao">Na tesoura ou máquina, como o cliente preferir</p>
+                <p class="preco">R$ 25,00</p>
+            </li>
+            <li>
+                <h2>Barba</h2>
+                <img src="imagens/barba.jpg">
+                <p class="descricao">Corte e desenho profissional de barba</p>
+                <p class="preco">R$ 18,00</p>
+            </li>
+            <li>
+                <h2>Cabelo + Barba</h2>
+                <img src="imagens/cabelo+barba.jpg">
+                <p class="descricao">Pacote completo de cabelo e barba</p>
+                <p class="preco">R$ 35,00</p>
+            </li>
+        </ul>
+    </main>
 </body>
 
 </html>
