Atualizando cabeçalho da pagina principal

--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbearia Alura</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
     <header>
-        <h1 class="tituloprincipal"> Barbearia Alura </h1>
+        <div class="caixa">
+            <h1><img src="imagens/logo.png"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <img id="banner" src="imagens/banner.jpg">
@@ -38,11 +48,11 @@
 
         <h3 class="titulocentralizado">Benefícios</h2>
 
-            <ul>
-                <li class="itens">Atendimento aos clientes</li>
-                <li class="itens">Espaço diferenciado</li>
-                <li class="itens">Localização</li>
-                <li class="itens">Espaço diferenciado</li>
+            <ul class="itens">
+                <li>Atendimento aos clientes</li>
+                <li>Espaço diferenciado</li>
+                <li>Localização</li>
+                <li>Espaço diferenciado</li>
             </ul>
 
             <img class="imagemb" src="imagens/beneficios.jpg">
