--- a/contato.html
+++ b/contato.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos - Barbearia Alura</title>
+    <title>Contato - Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="contato.css">
 </head>
 
 <body>
@@ -25,7 +25,18 @@
     </header>
 
     <main>
-        
+        <form>
+            <label for="nomesobrenome">Nome e Sobrenome</label>
+            <input type="text" id="nomesobrenome">
+
+            <label for="email">Email</label>
+            <input type="text" id="email">
+
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone">
+
+            <input type="submit" value="Enviar Formulário">
+        </form>
     </main>
 
     <footer>
