--- a/contato.html
+++ b/contato.html
@@ -64,6 +64,30 @@
             
         </form>
 
+        <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>08h as 20h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>08h as 20h</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>08h as 20h</td>
+                </tr>
+            </tbody>
+
+        </table>
     </main>
 
     <footer>
