--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             <img class="imagemb" src="imagens/beneficios.jpg">
 
     </div>
+    
+    <footer>
+        <img src="imagens/logo-branco.png" alt="logo da barbearia Alura">
+        <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    </footer>
 
 </body>
 
