--- a/index.html
+++ b/index.html
@@ -25,40 +25,47 @@
         </div>
     </header>
 
-    <img id="banner" src="imagens/banner.jpg">
+    <img class="banner" src="imagens/banner.jpg" alt="uma barbearia">
 
-    <div class="principal">
+    <main>
 
-        <h2 class="titulocentralizado">Sobre a Barbearia Alura</h1>
+        <section class="principal">
 
-            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
-                para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é
-                destaque na cidade e conquista novos clientes a cada dia.</p>
+            <h2 class="tituloprincipal">Sobre a Barbearia Alura</h1>
 
-            <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
-                        clientes"</strong>.</em></p>
+            <img class="utensilios" src="imagens/utensilios.jpg" alt="utensilios de um barbeiro">
 
-            <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
-                padrão de excelência e agilidade, garantindo qualidade e satisfação dos
-                nossos clientes.</p>
+                <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de
+                    melhor
+                    para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é
+                    destaque na cidade e conquista novos clientes a cada dia.</p>
 
-    </div>
+                <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
+                            clientes"</strong>.</em></p>
 
-    <div class="beneficios">
+                <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui
+                    padrão de excelência e agilidade, garantindo qualidade e satisfação dos
+                    nossos clientes.</p>
 
-        <h3 class="titulocentralizado">Benefícios</h2>
+        </section>
 
-            <ul class="itens">
-                <li>Atendimento aos clientes</li>
-                <li>Espaço diferenciado</li>
-                <li>Localização</li>
-                <li>Espaço diferenciado</li>
-            </ul>
+        <section class="beneficios">
 
-            <img class="imagemb" src="imagens/beneficios.jpg">
+            <h3 class="tituloprincipal">Benefícios</h2>
 
-    </div>
-    
+                <ul class="itens">
+                    <li>Atendimento aos clientes</li>
+                    <li>Espaço diferenciado</li>
+                    <li>Localização</li>
+                    <li>Espaço diferenciado</li>
+                </ul>
+
+                <img class="imagemb" src="imagens/beneficios.jpg">
+
+        </section>
+
+    </main>
+
     <footer>
         <img src="imagens/logo-branco.png" alt="logo da barbearia Alura">
         <p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
