--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Barbearia Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
 </head>
 
@@ -49,6 +50,15 @@
 
         </section>
 
+        <section class="mapa">
+
+            <h3 class="tituloprincipal">Nosso estabeleciomento</h3>
+            <p>Nosso estabeleciomento esta localizado no coração da cidade</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4416010952987!2d-46.634628884385734!3d-23.58849046848123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5ba6816fe839%3A0xda8627521b8e4b90!2sAlura!5e0!3m2!1spt-BR!2sbr!4v1673811200896!5m2!1spt-BR!2sbr" 
+            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        </section>
+
         <section class="beneficios">
 
             <h3 class="tituloprincipal">Benefícios</h2>
@@ -62,6 +72,9 @@
 
                 <img class="imagemb" src="imagens/beneficios.jpg">
 
+                <div class="video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>        
         </section>
 
     </main>
