corrigindo o alinhamento da pagina de contatos

--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="maincontato">
         <form>
             <label for="nomesobrenome">Nome e Sobrenome</label>
             <input type="text" id="nomesobrenome" class="inputpadrao" placeholder="Luis Inacio da Silva" required>
